[package]
name = "mediaai"
version = "0.1.0"
edition = "2021"
authors = ["MediaAI Research Team"]
description = "AI-Driven Cell Culture Media Intelligence Platform"
license = "MIT"
repository = "https://github.com/dechang64/media-ai-platform"

[dependencies]
# Runtime
tokio = { version = "1.44", features = ["full"] }
tonic = "0.13"
prost = "0.13"
axum = "0.8"
tower = "0.5"

# Vector Search
hnsw = "0.11"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
parking_lot = "0.12"

# Metrics
prometheus = "0.13"

# Config
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Asyncrait
async-trait = "0.1"

[features]
default = ["rest", "grpc"]
rest = ["axum", "tower"]
grpc = ["tonic", "prost"]

[lib]
name = "mediaai"
path = "src/lib.rs"

[[bin]]
name = "mediaai"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1